# bazel-gazelle

./: BUILD.bazel  def.bzl
cmd/: BUILD.bazel
cmd/autogazelle/: BUILD.bazel
cmd/fetch_repo/: BUILD.bazel
cmd/gazelle/: BUILD.bazel
cmd/generate_repo_config/: BUILD.bazel
cmd/move_labels/: BUILD.bazel
config/: BUILD.bazel
docs/: BUILD.bazel
flag/: BUILD.bazel
internal/: BUILD.bazel
internal/bzlmod/: BUILD.bazel
internal/gazellebinarytest/: BUILD.bazel
internal/generationtest/: BUILD.bazel
internal/language/: BUILD.bazel
internal/version/: BUILD.bazel
internal/wspace/: BUILD.bazel
label/: BUILD.bazel
language/: BUILD.bazel
language/bazel/: BUILD.bazel
language/go/: BUILD.bazel
language/proto/: BUILD.bazel
merger/: BUILD.bazel
pathtools/: BUILD.bazel
repo/: BUILD.bazel
resolve/: BUILD.bazel
rule/: BUILD.bazel
tests/: BUILD.bazel
tests/bcr/: BUILD.bazel
tests/bzlmod/: BUILD.bazel
tests/visibility_attr/: BUILD.bazel
testtools/: BUILD.bazel
tools/: BUILD.bazel
tools/releaser/: BUILD.bazel
walk/: BUILD.bazel
